modal spacing for fixnav

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -1,3 +1,7 @@
+#modalReview {
+  padding-top:70px;
+}
+
 .form-review {
     font-size: 14px;
   .collection_radio_buttons {
